added responsive card section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
     <!-- font-awesome cdn link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <script src="https://kit.fontawesome.com/f5876f1413.js" crossorigin="anonymous"></script>
+
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +18,7 @@
 </head>
 
 <body class="roboto-normal">
+    <!-- header part  -->
     <header>
         <nav>
             <section class="nav-section">
@@ -26,16 +26,88 @@
                 <div class="nav-container">
                     <ul>
                         <li><a href="">Home</a></li>
-                        <li><a href=""><span>Shope</span></a></li>
-                        <li><a href=""><span>About Us</span></a></li>
+                        <li><a href=""><span class="nav-items">Shope</span></a></li>
+                        <li><a href=""><span class="nav-items">About Us</span></a></li>
                     </ul>
-                    <a href="" class="shopping"><i class="fa-solid fa-cart-shopping" ></i>Card($56)</a>
+                    <a href="" class="shopping"><i class="fa-solid fa-cart-shopping"></i>Card($56)</a>
                 </div>
             </section>
         </nav>
     </header>
+    <!-- main part  -->
     <main>
-        up cumming -1
+        <!-- main section-01  -->
+        <section class="banner-section">
+            <div class="banner-left">
+                <h1>ALWAYS <span class="fresh">FRESH FLOWERS <br></span>
+                </h1>
+                <p>Indulge your senses with the beauty and fragrance of <br> our fresh flower shop. From classic roses
+                    to
+                    exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.
+                </p>
+            </div>
+            <div class="banner-right">
+                <img src="./images/hero-flower.png" alt="">
+            </div>
+        </section>
+        <!-- main section-02  -->
+        <section class="plants-section">
+            <div class="plants-container">
+                <h1><span class="our">Our</span> Plants</h1>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+                <div class="card">
+                    <img src="./images/sample-flower-image.png" alt="sample">
+                    <h2>Lily Blossom</h2>
+                    <h3>20 USD</h3>
+                    <button class="btn">ADD TO CARD</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         up cumming -2
