added join section whit responsive layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio </title>
     <!-- font-awesome cdn link -->
-   <script src="https://kit.fontawesome.com/f5876f1413.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -107,6 +109,69 @@
                     <button class="btn">ADD TO CARD</button>
                 </div>
             </div>
+        </section>
+        <!-- main section-03  -->
+        <section class="banner2-section, hide">
+            <div class="banner2-left">
+                <img class="img1" src="./images/flower-store.png" alt="">
+                <img class="img2" src="./images/trusted-badge.png" alt="">
+            </div>
+            <div class="banner2-right">
+                <h1>
+                    Flower & Plants <br> Lover
+                </h1>
+                <li>
+                    <p>Indulge your senses with the beauty and <br>fragrance of our fresh flower shop. From classic <br>
+                        roses to exotic blooms, we offer a wide variety <br>of fresh.</p>
+                </li>
+                <li>
+                    <p>Indulge your senses with the beauty and <br>fragrance of our fresh flower shop. From classic <br>
+                        roses to exotic blooms, we offer a wide variety <br>of fresh.</p>
+                </li>
+                <li>
+                    <p>Indulge your senses with the beauty and <br>fragrance of our fresh flower shop. From classic <br>
+                        roses to exotic blooms, we offer a wide variety <br>of fresh.</p>
+                </li>
+            </div>
+        </section>
+        <!-- main section-04  -->
+        <section class="latest-section hide">
+            <div class="latest-container">
+                <h1><span class="latest">Latest</span> Deals</h1>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
+                    to
+                    exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div>
+                <div>
+                    <div>
+                        <h1>60% Off | Bloom Plant</h1>
+                        <a href="">
+                            <h2>Shop Now</h2>
+                        </a>
+                    </div>
+                    <div>
+                        <h1>30% Off | Ana Plant</h1>
+                        <a href="">
+                            <h2>Shop Now</h2>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <h1>25% Off | Zabo Plant</h1>
+                    <a href="">
+                        <h2>Shop Now</h2>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- main section-05  -->
+        <section class="join-section">
+            <h1>Join the colorful Bunch</h1>
+            <form>
+                <input type="text" placeholder="Write your Email">
+                <button class="btn-primary">Subscribe</button>
+            </form>
         </section>
     </main>
     <footer>
