some modifi in css

--- a/index.html
+++ b/index.html
@@ -175,7 +175,38 @@
         </section>
     </main>
     <footer>
-        up cumming -2
+        <div class="footer-container">
+            <div class="footer-part-1">
+               <img src="./images/logo.png" alt="">
+               <p>Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+            </div>
+            <div class="footer-part-2">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-part-3">
+                <ul>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Tears of Service</a></li>
+                    <li><a href="">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="footer-part-4">
+               <figure>
+                 <img src="./images/icon-linkedin.png" alt="">
+                <img src="./images/icon-twitter.png" alt="">
+                <img src="./images/icon-facebook.png" alt="">
+                <img src="./images/icon-youtube.png" alt="">
+               </figure>
+            </div>
+        </div>
     </footer>
 </body>
 
