--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </section>
         <!-- main section-03  -->
-        <section class="banner2-section, hide">
+        <section class="banner2-section">
             <div class="banner2-left">
                 <img class="img1" src="./images/flower-store.png" alt="">
                 <img class="img2" src="./images/trusted-badge.png" alt="">
@@ -135,29 +135,29 @@
             </div>
         </section>
         <!-- main section-04  -->
-        <section class="latest-section hide">
+        <section class="latest-section">
             <div class="latest-container">
                 <h1><span class="latest">Latest</span> Deals</h1>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
                     to
                     exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-            <div>
-                <div>
-                    <div>
-                        <h1>60% Off | Bloom Plant</h1>
+            <div class="container <i class="fas fa-map-marker-question    "></i>">
+                <div class="left-card">
+                    <div style="background-image:url(./images/deal-bloom.png); " class="card-left-1">
+                        <h3>60% Off | Bloom Plant</h3>
                         <a href="">
                             <h2>Shop Now</h2>
                         </a>
                     </div>
-                    <div>
-                        <h1>30% Off | Ana Plant</h1>
+                    <div style="background-image: url(./images/deal-ana.png);" class="card-left-2">
+                        <h3>30% Off | Ana Plant</h3>
                         <a href="">
                             <h2>Shop Now</h2>
                         </a>
                     </div>
                 </div>
-                <div>
+                <div style="background-image: url(./images/deal-zabo.png);" class="card-right">
                     <h1>25% Off | Zabo Plant</h1>
                     <a href="">
                         <h2>Shop Now</h2>
